--- a/Panuon.UI.Silver/Control.xaml
+++ b/Panuon.UI.Silver/Control.xaml
@@ -1,3 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
 
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="pack://application:,,,/Panuon.UI.Silver;component/Themes/Slider.xaml" />
+    </ResourceDictionary.MergedDictionaries>
+
 </ResourceDictionary>
