--- a/Panuon.UI.Silver/Control.xaml
+++ b/Panuon.UI.Silver/Control.xaml
@@ -2,6 +2,7 @@
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/Panuon.UI.Silver;component/Themes/Slider.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/Panuon.UI.Silver;component/Themes/Button.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
 </ResourceDictionary>
