--- a/ScreenToGif/ScreenToGif/App.xaml
+++ b/ScreenToGif/ScreenToGif/App.xaml
@@ -1,9 +1,10 @@
 ﻿<Application x:Class="ScreenToGif.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ScreenToGif"
-             StartupUri="MainWindow.xaml">
+             Startup="App_Startup">
+
     <Application.Resources>
-         
+        <DropShadowEffect x:Key="ShadowEffect" ShadowDepth="0" Color="Blue" Opacity="1" BlurRadius="5" RenderingBias="Performance" />
     </Application.Resources>
+
 </Application>
