--- a/ScreenToGif/ScreenToGif/App.xaml
+++ b/ScreenToGif/ScreenToGif/App.xaml
@@ -7,6 +7,69 @@
         <DropShadowEffect x:Key="ShadowEffect" ShadowDepth="0" Color="DodgerBlue" Opacity="1" BlurRadius="5" RenderingBias="Performance" />
         <DropShadowEffect x:Key="ShadowEffectSmall" ShadowDepth="0" Color="DodgerBlue" Opacity="1" BlurRadius="3" RenderingBias="Performance" />
         <DropShadowEffect x:Key="ShadowEffectText" ShadowDepth="0" Color="PowderBlue" Opacity=".9" BlurRadius="3" RenderingBias="Performance" />
+        <DropShadowEffect x:Key="ShadowEffectDynamic" ShadowDepth="0" Color="{Binding Forecolor, RelativeSource={RelativeSource TemplatedParent}}" Opacity=".3" BlurRadius="2" RenderingBias="Performance" />
+
+        <!-- Normal Button Style -->
+        <Style TargetType="{x:Type Button}" x:Key="NormalButtonStyle">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ButtonBase}">
+                        <StackPanel MinHeight="{TemplateBinding MinHeight}" Orientation="Horizontal" Background="{TemplateBinding Background}"
+                                    SnapsToDevicePixels="True" Effect="{DynamicResource ShadowEffect}">
+                            <Image VerticalAlignment="Center" HorizontalAlignment="Center" Source="{Binding RelativeSource={RelativeSource TemplatedParent},Path=Tag}"
+                                   Margin="2,0,2,0" Width="Auto" Height="Auto" Stretch="None" />
+                            <TextBlock MaxWidth="{Binding Path=ActualWidth,RelativeSource={RelativeSource TemplatedParent}}"
+                                       HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                       VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                       Margin="{TemplateBinding Padding}"
+                                       Text="{TemplateBinding Content}"
+                                       TextWrapping="Wrap"/>
+                        </StackPanel>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+
+                </Trigger>
+                <Trigger Property="IsPressed" Value="True">
+                    <Setter Property="Foreground" Value="White" />
+                    <Setter Property="Background" Value="CornflowerBlue" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
+        <!-- Clear Button Style -->
+        <Style TargetType="{x:Type Button}" x:Key="ClearButtonStyle">
+            <Setter Property="Background" Value="Transparent" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ButtonBase}">
+                        <StackPanel MinHeight="{TemplateBinding MinHeight}" Orientation="Horizontal" 
+                                    Background="{TemplateBinding Background}" SnapsToDevicePixels="True">
+                            <Image VerticalAlignment="Center" HorizontalAlignment="Center" Source="{Binding RelativeSource={RelativeSource TemplatedParent},Path=Tag}"
+                                   Margin="2,0,2,0" Width="Auto" Height="Auto" Stretch="None" />
+                            <TextBlock MaxWidth="{Binding Path=ActualWidth,RelativeSource={RelativeSource TemplatedParent}}"
+                                       HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                       VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                       Margin="{TemplateBinding Padding}"
+                                       Text="{TemplateBinding Content}"
+                                       TextWrapping="Wrap"/>
+                        </StackPanel>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver"  Value="True">
+                    <Setter Property="Background" Value="#FFBEE6F5" />
+                </Trigger>
+                <Trigger Property="IsPressed" Value="True">
+                    <Setter Property="Foreground" Value="White" />
+                    <Setter Property="Background" Value="CornflowerBlue" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
     </Application.Resources>
 
 </Application>
