--- a/ScreenToGif/ScreenToGif/Themes/Generic.xaml
+++ b/ScreenToGif/ScreenToGif/Themes/Generic.xaml
@@ -1,7 +1,10 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:ScreenToGif.Controls">
+                    xmlns:local="clr-namespace:ScreenToGif.Controls"
+                    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+                    xmlns:behaviours="clr-namespace:ScreenToGif.Behaviours">
 
+    <!-- Window Button Style -->
     <Style TargetType="{x:Type Button}" x:Key="WindowButtonStyle">
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="FontFamily" Value="Webdings" />
@@ -77,6 +80,7 @@
         </Style.Triggers>
     </Style>
 
+    <!-- Light Window Style -->
     <Style TargetType="{x:Type local:LightWindow}">
         <Setter Property="WindowStyle" Value="None" />
         <Setter Property="ResizeMode" Value="NoResize" />
@@ -85,6 +89,7 @@
         <Setter Property="BorderBrush" Value="Silver" />
         <Setter Property="MinHeight" Value="100" />
         <Setter Property="MinWidth" Value="180" />
+        <Setter Property="Title" Value="Screen To Gif" />
 
         <Setter Property="Template">
             <Setter.Value>
@@ -104,9 +109,15 @@
 
                                 <Grid x:Name="moveRectangle" Background="{TemplateBinding Background}"
                                       Grid.Row="0" Grid.Column="0" Height="30" SnapsToDevicePixels="True">
-                                    <TextBlock x:Name="CaptionText" Text="Screen To Gif" 
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="*" />
+                                    </Grid.ColumnDefinitions>
+                                    <Image Grid.Column="0" Source="/ScreenToGif;component/Resources/Logo.ico" Margin="5,5,0,0" />
+                                    <TextBlock x:Name="CaptionText" Text="{TemplateBinding Title}" 
+                                               Grid.Column="1"
                                                FontFamily="Segoe UI" FontSize="16" Foreground="#FF6F5252"
-                                               FontWeight="Regular" Margin="10,5,0,0"/>
+                                               FontWeight="Regular" Margin="5,5,0,0"/>
                                 </Grid>
 
                                 <StackPanel Grid.Row="0" Grid.Column="1" Margin="0,0,2,0"
@@ -172,7 +183,11 @@
                                      VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
                                      VerticalContentAlignment="Center" HorizontalContentAlignment="Center"
                                      Margin="0,0,1,0" AllowDrop="False"
-                                     SnapsToDevicePixels="True" />
+                                     SnapsToDevicePixels="True">
+                                <i:Interaction.Behaviors>
+                                    <behaviours:TextBoxInputBehaviour RegularExpression="^\d+$" MaxLength="2" EmptyValue="1" />
+                                </i:Interaction.Behaviors>
+                            </TextBox>
                         </Grid>
                         <Grid Grid.Column="1">
                             <Grid.RowDefinitions>
