--- a/ScreenToGif/ScreenToGif/Windows/Options.xaml
+++ b/ScreenToGif/ScreenToGif/Windows/Options.xaml
@@ -1,10 +1,119 @@
 ﻿<Window x:Class="ScreenToGif.Windows.Options"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Options" Height="366" Width="476">
+        Title="Options" Icon="/ScreenToGif;component/Resources/Logo.ico"
+        WindowStartupLocation="CenterScreen"
+        SizeToContent="Width"
+        Height="360" Width="520"
+        MinWidth="500" MinHeight="360">
+
+    <Window.Resources>
+        <!-- RadioButton as ToggleButton -->
+        <Style BasedOn="{StaticResource {x:Type ToggleButton}}" TargetType="{x:Type RadioButton}" x:Key="ClearRadioBUttonStyle">
+            <Setter Property="Background" Value="Transparent" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ButtonBase}">
+                        <StackPanel MinHeight="{TemplateBinding MinHeight}" 
+                                    Orientation="Horizontal" SnapsToDevicePixels="True"
+                                    Background="{TemplateBinding Background}">
+                            <Image VerticalAlignment="Center" HorizontalAlignment="Center"
+                                   Source="{Binding RelativeSource={RelativeSource TemplatedParent},Path=Tag}"
+                                   Margin="2,0" Width="Auto" Height="Auto" Stretch="None"/>
+                            <TextBlock MaxWidth="{Binding Path=ActualWidth,RelativeSource={RelativeSource TemplatedParent}}"
+                                       HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                       VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                       Margin="{TemplateBinding Padding}"
+                                       Text="{TemplateBinding Content}"/>
+                        </StackPanel>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsChecked" Value="True">
+                    <Setter Property="Foreground" Value="Black" />
+                    <Setter Property="Background" Value="#FFBEE6F5" />
+                </Trigger>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Foreground" Value="MediumSlateBlue" />
+                    <Setter Property="Background" Value="#FFBEE6F5" />
+                </Trigger>
+                <Trigger Property="IsPressed" Value="True">
+                    <Setter Property="Foreground" Value="White" />
+                    <Setter Property="Background" Value="CornflowerBlue" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
+        <BooleanToVisibilityConverter x:Key="Bool2VisibilityConverter" />
+    </Window.Resources>
 
     <Grid>
+        <Label x:Name="OptionsLabel" Content="Options" Margin="5,5,0,0"
+               FontSize="24" FontFamily="Segoe UI Semilight" Effect="{StaticResource ShadowEffectDynamic}"
+               HorizontalAlignment="Left" VerticalAlignment="Top"/>
 
+        <Grid Margin="10,52,10,10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+
+            <!-- Options -->
+            <StackPanel Margin="0" >
+                <RadioButton x:Name="AppRadio" Content="Application" Tag="/ScreenToGif;component/Resources/Settings16x.png" Padding="1,3,5,3" Style="{DynamicResource ClearRadioBUttonStyle }" FontSize="18" FontFamily="Segoe UI Semilight" Foreground="#FF2B579A" Cursor="Hand"/>
+                <RadioButton x:Name="ImageRadio" Content="Image" Tag="/ScreenToGif;component/Resources/Image16x.png" Padding="1,3,5,3" Style="{DynamicResource ClearRadioBUttonStyle }" FontSize="18" FontFamily="Segoe UI Semilight" Foreground="#FF2B579A" Cursor="Hand"  />
+                <RadioButton x:Name="AboutRadio" Content="About" Tag="/ScreenToGif;component/Resources/Info16x.png" Padding="1,3,5,3" Style="{DynamicResource ClearRadioBUttonStyle }" FontSize="18" FontFamily="Segoe UI Semilight" Foreground="#FF2B579A" Cursor="Hand" IsChecked="True" />
+            </StackPanel>
+
+            <!-- All Panels -->
+            <StackPanel Grid.Column="1" Margin="5,0,0,0">
+                <!-- Application -->
+                <StackPanel x:Name="ApplicationPanel"  Visibility="{Binding IsChecked,ElementName=AppRadio,Converter={StaticResource Bool2VisibilityConverter}}">
+                    <CheckBox Content="Remember starup selection." HorizontalAlignment="Left" Margin="5,5,0,0" VerticalAlignment="Top"/>
+                    <CheckBox Content="Use the light theme." HorizontalAlignment="Left" Margin="5,5,0,0" VerticalAlignment="Top" />
+                </StackPanel>
+
+                <!-- Image -->
+                <StackPanel x:Name="ImagePanel" Visibility="{Binding IsChecked,ElementName=ImageRadio,Converter={StaticResource Bool2VisibilityConverter}}">
+                    <CheckBox Content="TODO" HorizontalAlignment="Left" Margin="5,5,0,0" VerticalAlignment="Top" />
+                </StackPanel>
+
+                <!-- About -->
+                <StackPanel x:Name="AboutPanel" Visibility="{Binding IsChecked,ElementName=AboutRadio}">
+                    <Grid Height="62" VerticalAlignment="Top">
+                        <Grid.RowDefinitions>
+                            <RowDefinition />
+                            <RowDefinition />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="37*"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="43*"/>
+                        </Grid.ColumnDefinitions>
+
+                        <Label x:Name="AboutLabel" Content="Screen To Gif" FontSize="18" FontFamily="Segoe UI Semilight"
+                               Effect="{DynamicResource ShadowEffectDynamic}" Margin="0,0,5,0"
+                               HorizontalAlignment="Right" VerticalAlignment="Center" Width="111"/>
+                        <Image Grid.Column="1" Source="/ScreenToGif;component/Resources/Tag16x.png" Stretch="None" Margin="0,9,0,0" />
+                        <Label x:Name="VersionLabel" Content="Version: 1.5" 
+                               FontSize="16" FontFamily="Segoe UI Semilight" Effect="{DynamicResource ShadowEffectDynamic}"
+                               VerticalContentAlignment="Center"
+                               Grid.Column="2" />
+                        <Label x:Name="LinkLabel" FontSize="14"
+                               HorizontalAlignment="Right" Cursor="Hand"
+                               Grid.Row="1" Grid.Column="0">
+                            <Hyperlink NavigateUri="https://screentogif.codeplex.com" RequestNavigate="Hyperlink_RequestNavigate" >screentogif.codeplex.com</Hyperlink>
+                        </Label>
+                        <Label x:Name="AuthorLabel" Content="Author: Nicke Manarin"
+                               Grid.Column="2" Grid.Row="1" 
+                               FontSize="16" FontFamily="Segoe UI Semilight"
+                               Effect="{DynamicResource ShadowEffectDynamic}"
+                               VerticalContentAlignment="Center"/>
+                    </Grid>
+                </StackPanel>
+            </StackPanel>
+        </Grid>
     </Grid>
 
 </Window>
