--- a/ScreenToGif/ScreenToGif/Windows/Startup.xaml
+++ b/ScreenToGif/ScreenToGif/Windows/Startup.xaml
@@ -11,6 +11,18 @@
         Height="220" Width="470">
 
     <Grid>
+        <Label Content="Screen To Gif 1.5" 
+               Margin="5 10 0 0" Height="32"
+               HorizontalAlignment="Left"  VerticalAlignment="Top"
+               Effect="{DynamicResource ShadowEffectDynamic}"
+               FontSize="18" Foreground="Black"/>
+        <Button x:Name="OptionsButton" Content="Options"
+                Margin="0,10,5,0" Height="30" Padding="1,1,5,1"
+                Tag="/ScreenToGif;component/Resources/Settings16x.png"
+                Style="{StaticResource ClearButtonStyle}"
+                Click="OptionsButton_Click"
+                HorizontalContentAlignment="Left" VerticalContentAlignment="Center"
+                VerticalAlignment="Top" HorizontalAlignment="Right"/>
         <Grid Margin="0,47,0,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
@@ -19,7 +31,7 @@
             </Grid.ColumnDefinitions>
 
             <Button x:Name="RecordButton" Margin="5" Click="RecordButton_Click" 
-                    BorderBrush="{x:Null}" Cursor="Hand" Effect="{DynamicResource ShadowEffect}">
+                    BorderBrush="{x:Null}" Cursor="Hand" Effect="{DynamicResource ShadowEffectSmall}">
                 <StackPanel Orientation="Horizontal">
                     <Image Source="/ScreenToGif;component/Resources/Logo.ico" Height="47" Width="50" Stretch="UniformToFill" />
                     <Label Content="Record" VerticalAlignment="Center" HorizontalAlignment="Center" />
@@ -27,7 +39,7 @@
             </Button>
 
             <Button x:Name="OpenButton" Margin="5" Click="OpenButton_Click"
-                    BorderBrush="{x:Null}" Grid.Column="1" Cursor="Hand" Effect="{DynamicResource ShadowEffect}">
+                    BorderBrush="{x:Null}" Grid.Column="1" Cursor="Hand" Effect="{DynamicResource ShadowEffectSmall}">
                 <StackPanel Orientation="Horizontal">
                     <Image Source="/ScreenToGif;component/Resources/Logo.ico" Height="47" Width="50" Stretch="UniformToFill" />
                     <Label Content="Open" VerticalAlignment="Center" HorizontalAlignment="Center" />
@@ -35,7 +47,7 @@
             </Button>
 
             <Button x:Name="CreateButton" Margin="5" Click="CreateButton_Click"
-                    BorderBrush="{x:Null}" Grid.Column="2" Cursor="Hand" Effect="{DynamicResource ShadowEffect}">
+                    BorderBrush="{x:Null}" Grid.Column="2" Cursor="Hand" Effect="{DynamicResource ShadowEffectSmall}">
                 <StackPanel Orientation="Horizontal">
                     <Image Source="/ScreenToGif;component/Resources/Logo.ico" Height="47" Width="50" Stretch="UniformToFill" />
                     <Label Content="Create" VerticalAlignment="Center" HorizontalAlignment="Center" />
@@ -43,8 +55,7 @@
             </Button>
         </Grid>
 
-        <Label Content="Screen To Gif 1.5 [Alpha]" HorizontalAlignment="Left" Margin="10 10 0 0" VerticalAlignment="Top"
-               FontSize="16" Foreground="#FF404040" Height="32"/>
+
     </Grid>
 
 </Window>
