--- a/ScreenToGif/ScreenToGif/App.xaml
+++ b/ScreenToGif/ScreenToGif/App.xaml
@@ -1,13 +1,13 @@
 ﻿<Application x:Class="ScreenToGif.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             Startup="App_Startup">
+             Startup="App_Startup" Exit="App_Exit">
 
     <Application.Resources>
         <DropShadowEffect x:Key="ShadowEffect" ShadowDepth="0" Color="DodgerBlue" Opacity="1" BlurRadius="5" RenderingBias="Performance" />
         <DropShadowEffect x:Key="ShadowEffectSmall" ShadowDepth="0" Color="DodgerBlue" Opacity="1" BlurRadius="3" RenderingBias="Performance" />
         <DropShadowEffect x:Key="ShadowEffectText" ShadowDepth="0" Color="PowderBlue" Opacity=".9" BlurRadius="3" RenderingBias="Performance" />
-        <DropShadowEffect x:Key="ShadowEffectDynamic" ShadowDepth="0" Color="{Binding Forecolor, RelativeSource={RelativeSource TemplatedParent}}" Opacity=".3" BlurRadius="2" RenderingBias="Performance" />
+        <DropShadowEffect x:Key="ShadowEffectDynamic" ShadowDepth="0" Color="{Binding Forecolor, RelativeSource={RelativeSource TemplatedParent}}" Opacity=".35" BlurRadius="3" RenderingBias="Performance" />
 
         <!-- Normal Button Style -->
         <Style TargetType="{x:Type Button}" x:Key="NormalButtonStyle">
@@ -67,6 +67,46 @@
                 <Trigger Property="IsPressed" Value="True">
                     <Setter Property="Foreground" Value="White" />
                     <Setter Property="Background" Value="CornflowerBlue" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
+        <!-- Office Button Style -->
+        <Style TargetType="{x:Type Button}" x:Key="OfficeButtonStyle">
+            <Setter Property="Background" Value="White"/>
+            <Setter Property="BorderBrush" Value="#FFABABAB" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ButtonBase}">
+                        <Border BorderBrush="{TemplateBinding BorderBrush}"
+                                Background="{TemplateBinding Background}"
+                                BorderThickness="1"
+                                MinHeight="{TemplateBinding MinHeight}">
+                            <StackPanel Orientation="Horizontal"
+                                        SnapsToDevicePixels="True"
+                                        HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <Image VerticalAlignment="Center" HorizontalAlignment="Center"
+                                       Margin="2,0,2,0" Width="Auto" Height="Auto" Stretch="None"
+                                       Source="{Binding RelativeSource={RelativeSource TemplatedParent},Path=Tag}"/>
+                                <TextBlock MaxWidth="{Binding ActualWidth,RelativeSource={RelativeSource TemplatedParent}}"
+                                           HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                           VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                           Margin="{TemplateBinding Padding}"
+                                           Text="{TemplateBinding Content}"
+                                           TextWrapping="Wrap"/>
+                            </StackPanel>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#FFD5E1F2" />
+                    <Setter Property="BorderBrush" Value="#FFA3BDE3" />
+                </Trigger>
+                <Trigger Property="IsPressed" Value="True">
+                    <Setter Property="Background" Value="#FFA3BDE3" />
+                    <Setter Property="BorderBrush" Value="#FF2A8DD4" />
                 </Trigger>
             </Style.Triggers>
         </Style>
