--- a/ScreenToGif/ScreenToGif/Themes/Generic.xaml
+++ b/ScreenToGif/ScreenToGif/Themes/Generic.xaml
@@ -1,8 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:ScreenToGif.Controls"
-                    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-                    xmlns:behaviours="clr-namespace:ScreenToGif.Behaviours">
+                    xmlns:local="clr-namespace:ScreenToGif.Controls">
 
     <!-- Window Button Style -->
     <Style TargetType="{x:Type Button}" x:Key="WindowButtonStyle">
@@ -168,6 +166,44 @@
         </Setter>
     </Style>
 
+    <!-- RepeatButton Style -->
+    <Style TargetType="{x:Type RepeatButton}" x:Key="OfficeRepeatButtonStyle" >
+        <Setter Property="Background" Value="#FFF5F5F5" />
+        <Setter Property="BorderBrush" Value="#FFABABAB"/>
+
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ButtonBase}">
+                    <Border x:Name="Chrome"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            Background="{TemplateBinding Background}"
+                            Margin="0"
+                            SnapsToDevicePixels="True">
+                        <ContentPresenter ContentTemplate="{TemplateBinding ContentTemplate}"
+                                          Content="{TemplateBinding Content}"
+                                          ContentStringFormat="{TemplateBinding ContentStringFormat}"
+                                          HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                          Margin="{TemplateBinding Padding}"
+                                          SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+                                          RecognizesAccessKey="True"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="#FFD5E1F2" />
+                <Setter Property="BorderBrush" Value="#FFA3BDE3" />
+            </Trigger>
+            <Trigger Property="IsPressed" Value="True">
+                <Setter Property="Background" Value="#FFA3BDE3" />
+                <Setter Property="BorderBrush" Value="#FF2A8DD4" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
     <!-- Numberic Up Down -->
     <Style TargetType="{x:Type local:NumbericUpDown}">
         <Setter Property="Template">
@@ -184,9 +220,6 @@
                                      VerticalContentAlignment="Center" HorizontalContentAlignment="Center"
                                      Margin="0,0,1,0" AllowDrop="False"
                                      SnapsToDevicePixels="True">
-                                <i:Interaction.Behaviors>
-                                    <behaviours:TextBoxInputBehaviour RegularExpression="^\d+$" MaxLength="2" EmptyValue="1" />
-                                </i:Interaction.Behaviors>
                             </TextBox>
                         </Grid>
                         <Grid Grid.Column="1">
@@ -195,7 +228,7 @@
                                 <RowDefinition Height="*" />
                             </Grid.RowDefinitions>
                             <RepeatButton Content="▲" Grid.Row="0" Name="Part_UpButton" Style="{StaticResource RepeatButtonStyle}" FontSize="9" VerticalContentAlignment="Top" Padding="0" />
-                            <RepeatButton Content="▼" Grid.Row="1" Name="Part_DownButton" Style="{StaticResource RepeatButtonStyle}" FontSize="9" VerticalContentAlignment="Bottom" Padding="0" Margin="0,1,0,0" />
+                            <RepeatButton Content="▼" Grid.Row="1" Name="Part_DownButton" Style="{StaticResource OfficeRepeatButtonStyle}" FontSize="9" VerticalContentAlignment="Bottom" Padding="0" Margin="0,1,0,0" />
                         </Grid>
                     </Grid>
                 </ControlTemplate>
