--- a/ScreenToGif/ScreenToGif/Windows/Create.xaml
+++ b/ScreenToGif/ScreenToGif/Windows/Create.xaml
@@ -1,50 +1,93 @@
 ﻿<Window x:Class="ScreenToGif.Windows.Create"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Create" Height="217" Width="269"
+        Title="Create" Height="250.5" Width="260"
         WindowStartupLocation="CenterScreen"
         Icon="/ScreenToGif;component/Resources/Logo.ico">
 
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/ScreenToGif;component/Resources/Icons/New.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
+
     <Grid>
-        <Grid Height="42" VerticalAlignment="Bottom">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <Button x:Name="OkButton" Content="OK" Click="OkButton_Click"
-                    Margin="13,12,10,10" IsCancel="True" />
-            <Button x:Name="CancelButton" Content="Cancel"
-                    Margin="10,12,10,10" Grid.Column="1" IsCancel="True"/>
-        </Grid>
-        <Grid Margin="10,0,10,47" Height="72" VerticalAlignment="Bottom">
+        <Viewbox x:Name="IconViewBox"  
+                 Stretch="Fill" Child="{StaticResource NewIcon}"
+                 HorizontalAlignment="Left" VerticalAlignment="Top"
+                 Width="32" Height="32" Margin="10,15,0,0"
+                 ScrollViewer.VerticalScrollBarVisibility="Disabled"/>
+
+        <Label x:Name="NewLabel" Content="New Animation"
+               Margin="47,10,10,0"
+               FontSize="20" FontFamily="Segoe UI Semilight"
+               Effect="{DynamicResource ShadowEffectDynamic}"
+               VerticalAlignment="Top"/>
+
+        <Grid Margin="10,61,10,0" Effect="{StaticResource ShadowEffectDynamic}"
+              VerticalAlignment="Top">
             <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="61*" />
-                <ColumnDefinition Width="180*" />
+            <Grid.ColumnDefinitions >
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
-            <TextBox x:Name="WidthText" 
-                     HorizontalAlignment="Left" VerticalAlignment="Top"
-                     Height="23" Width="118" Margin="10,7,0,0" Grid.Column="1"
-                     TextWrapping="Wrap"/>
-            <TextBox x:Name="HeightText" 
-                     HorizontalAlignment="Left" VerticalAlignment="Top"
-                     Height="23" Width="118" Margin="10,3,0,0" Grid.Column="1" Grid.Row="1"
-                     TextWrapping="Wrap"/>
-            <Label Grid.Row="0" Grid.Column="0" Content="Width"
-                   HorizontalAlignment="Left" VerticalAlignment="Top"
-                   Height="23" Width="51" Margin="10,7,0,0"/>
-            <Label Grid.Row="1" Grid.Column="0" Content="Height"
-                   HorizontalAlignment="Left" VerticalAlignment="Top"
-                   Height="26" Width="51" Margin="10,3,0,0"/>
+            <Label Grid.Row="0" Grid.Column="0" Content="Width" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="5,5,0,0" VerticalContentAlignment="Center" Padding="5"/>
+            <TextBox x:Name="WidthText" Text="100" 
+                     MaxLength="4" MaxLines="1" TextWrapping="Wrap"
+                     Grid.Row="0" Grid.Column="1"
+                     PreviewTextInput="Text_PreviewTextInput"
+                     DataObject.Pasting="PastingHandler"
+                     TextChanged="Text_TextChanged"
+                     Height="24" Margin="10,5,4,0" 
+                     VerticalContentAlignment="Center"/>
+
+            <Label Grid.Row="1" Grid.Column="0" Content="Height" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="5,5,0,0" VerticalContentAlignment="Center" Padding="5"/>
+            <TextBox x:Name="HeightText" Text="100" 
+                     MaxLength="4" MaxLines="1" TextWrapping="Wrap"
+                     Grid.Row="1" Grid.Column="1"
+                     PreviewTextInput="Text_PreviewTextInput"
+                     DataObject.Pasting="PastingHandler"
+                     TextChanged="Text_TextChanged"
+                     Height="24" Margin="10,5,4,0" 
+                     VerticalContentAlignment="Center"/>
+
+            <Label Grid.Row="2" Grid.Column="0" Content="Backcolor" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5,9,0,0"/>
+            <ComboBox x:Name="BackCombo" Grid.Row="2" Grid.Column="1"
+                      SelectedIndex="0" IsReadOnly="True"
+                      Margin="10,5,5,5" Padding="5,3"
+                      VerticalContentAlignment="Center">
+                <StackPanel Orientation="Horizontal">
+                    <Border BorderBrush="Black" BorderThickness="1" Background="White" Width="20" Height="20"/>
+                    <Label Content="White" VerticalAlignment="Top" VerticalContentAlignment="Center" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <Border BorderBrush="Black" BorderThickness="1" Background="Gray" Width="20" Height="20"/>
+                    <Label Content="Gray" VerticalAlignment="Top" VerticalContentAlignment="Center" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <Border BorderBrush="Black" BorderThickness="1" Background="Black" Width="20" Height="20"/>
+                    <Label Content="Black" VerticalAlignment="Top" VerticalContentAlignment="Center" />
+                </StackPanel>
+            </ComboBox>
         </Grid>
 
-        <Label Content="New Image"  FontSize="20"
-               HorizontalAlignment="Left" VerticalAlignment="Top"
-               Margin="0,10,0,0" />
+        <Grid Height="42" VerticalAlignment="Bottom" Effect="{StaticResource ShadowEffectDynamic}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+
+            <Button x:Name="OkButton" Content="OK" Margin="13,5,10,10" IsCancel="True" Click="OkButton_Click" Style="{StaticResource OfficeButtonStyle}" Tag="/ScreeToGif;component/Resources/Done16x.png"/>
+            <Button Grid.Column="1" x:Name="CancelButton" Content="Cancel" Margin="13,5,10,10" IsCancel="True" Click="OkButton_Click" Style="{StaticResource OfficeButtonStyle}" Tag="/ScreeToGif;component/Resources/Done16x.png"/>
+        </Grid>
+
     </Grid>
 
 </Window>
