--- a/ScreenToGif/ScreenToGif/Windows/Editor.xaml
+++ b/ScreenToGif/ScreenToGif/Windows/Editor.xaml
@@ -15,6 +15,8 @@
                 Value="50" Maximum="100" SmallChange="0.5" TickPlacement="BottomRight"
                 AutoToolTipPlacement="TopLeft"
                 VerticalAlignment="Bottom"/>
+
+        <!-- Tests -->
         <Grid HorizontalAlignment="Left" VerticalAlignment="Top"
               Height="215" Width="516"  Margin="67,51,0,0" Visibility="Hidden">
             <Grid Height="62" Margin="10,10,10,0" VerticalAlignment="Top">
@@ -47,6 +49,9 @@
                    Effect="{DynamicResource ShadowEffectDynamic}"
                    VerticalContentAlignment="Center"/>
             </Grid>
+
+            <Viewbox HorizontalAlignment="Left" VerticalAlignment="Top"
+                     Width="39" Height="41" Margin="23,51,0,0"/>
         </Grid>
     </Grid>
 </Window>
