--- a/ScreenToGif/ScreenToGif/Windows/Options.xaml
+++ b/ScreenToGif/ScreenToGif/Windows/Options.xaml
@@ -2,10 +2,11 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Options" Icon="/ScreenToGif;component/Resources/Logo.ico"
+        SnapsToDevicePixels="True"
         WindowStartupLocation="CenterScreen"
         SizeToContent="Width"
         Height="360" Width="520"
-        MinWidth="500" MinHeight="360">
+        MinWidth="520" MinHeight="360">
 
     <Window.Resources>
         <!-- RadioButton as ToggleButton -->
