--- a/ScreenToGif/ScreenToGif/Windows/Recorder.xaml
+++ b/ScreenToGif/ScreenToGif/Windows/Recorder.xaml
@@ -1,9 +1,7 @@
 ﻿<custom:LightWindow x:Class="ScreenToGif.Windows.Recorder"
                     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
                     xmlns:custom="clr-namespace:ScreenToGif.Controls"
-                    xmlns:behaviours="clr-namespace:ScreenToGif.Behaviours"
                     Title="ScreenToGif" Height="255" Width="504"
                     SnapsToDevicePixels="True"
                     WindowStyle="None" AllowsTransparency="True" WindowStartupLocation="CenterScreen"
@@ -19,7 +17,7 @@
                     Height="28" Width="50" Margin="3,3,0,0" Effect="{DynamicResource ShadowEffect}"
                     UseLayoutRounding="True" BorderBrush="{x:Null}"
                     Tag="/ScreenToGif;component/Resources/Stop16x.png"
-                    Style="{StaticResource NormalButtonStyle}"
+                    Style="{StaticResource ClearButtonStyle}"
                     FlowDirection="LeftToRight" Padding="1,1,5,1"
                     VerticalAlignment="Center" HorizontalAlignment="Left"
                     VerticalContentAlignment="Center" HorizontalContentAlignment="Left"/>
@@ -28,7 +26,7 @@
                     Effect="{DynamicResource ShadowEffect}"
                     BorderBrush="{x:Null}" UseLayoutRounding="True"
                     Tag="/ScreenToGif;component/Resources/Record16x.png"
-                    Style="{StaticResource NormalButtonStyle}"
+                    Style="{StaticResource ClearButtonStyle}"
                     FlowDirection="LeftToRight"
                     HorizontalAlignment="Left"
                     HorizontalContentAlignment="Left" VerticalContentAlignment="Center"/>
@@ -39,9 +37,6 @@
                      TextWrapping="Wrap" Text="800"
                      Padding="5,0" Margin="0,3,0,0"
                      VerticalContentAlignment="Center" HorizontalContentAlignment="Center">
-                <i:Interaction.Behaviors>
-                    <behaviours:TextBoxInputBehaviour RegularExpression="^\d+$" MaxLength="4" EmptyValue="100" />
-                </i:Interaction.Behaviors>
             </TextBox>
             <Label Content="X" Margin="0,3,0,0" />
             <TextBox x:Name="WidthTextBox" 
@@ -51,9 +46,6 @@
                      LostFocus="TextBox_LostFocus"
                      Padding="5,0" Margin="0,3,0,0"
                      VerticalContentAlignment="Center" HorizontalContentAlignment="Center">
-                <i:Interaction.Behaviors>
-                    <behaviours:TextBoxInputBehaviour RegularExpression="^\d+$" MaxLength="4" EmptyValue="100" />
-                </i:Interaction.Behaviors>
             </TextBox>
             <Image Source="/ScreenToGif;component/Resources/Size.png" 
                    Stretch="None" StretchDirection="UpOnly"
@@ -66,18 +58,6 @@
                                    PreviewTextInput="TextBox_PreviewTextInput"/>
             <Image Source="/ScreenToGif;component/Resources/Delay16x.png" Stretch="None"
                    Margin="3,7" HorizontalAlignment="Right" StretchDirection="UpOnly"/>
-
-            <Border Width="2" Margin="0,3" >
-                <Border.Background>
-                    <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
-                        <GradientStop Color="#00D6D6D6"/>
-                        <GradientStop Color="#00D6D6D6" Offset="1"/>
-                        <GradientStop Color="#FFC1C1C1" Offset="0.5"/>
-                        <GradientStop Color="#64BFBFBF" Offset="0.9"/>
-                        <GradientStop Color="#54C3C3C3" Offset="0.1"/>
-                    </LinearGradientBrush>
-                </Border.Background>
-            </Border>
 
         </StackPanel>
     </Grid>
