--- a/ScreenToGif/ScreenToGif/Themes/Generic.xaml
+++ b/ScreenToGif/ScreenToGif/Themes/Generic.xaml
@@ -46,43 +46,6 @@
         </Style.Triggers>
     </Style>
 
-    <!-- RepeatButton Style-->
-    <Style TargetType="{x:Type RepeatButton}" x:Key="RepeatButtonStyle">
-        <Setter Property="Foreground" Value="#FF777777" />
-        <Setter Property="FontFamily" Value="Segoe UI" />
-        <Setter Property="FontSize" Value="6" />
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type RepeatButton}">
-                    <Border x:Name="Chrome"
-                            Background="{TemplateBinding Background}"
-                            Margin="0"
-                            SnapsToDevicePixels="True"
-                            BorderBrush="{TemplateBinding BorderBrush}">
-                        <ContentPresenter 
-                            ContentTemplate="{TemplateBinding ContentTemplate}"
-                            Content="{TemplateBinding Content}"
-                            ContentStringFormat="{TemplateBinding ContentStringFormat}"
-                            HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                            VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                            RecognizesAccessKey="True"
-                            SnapsToDevicePixels="True"/>
-                    </Border>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-        <Style.Triggers>
-            <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Foreground" Value="#FF444444" />
-                <Setter Property="Background" Value="White" />
-            </Trigger>
-            <Trigger Property="IsPressed" Value="True">
-                <Setter Property="Foreground" Value="Black" />
-                <Setter Property="Background" Value="CornflowerBlue" />
-            </Trigger>
-        </Style.Triggers>
-    </Style>
-
     <!-- Light Window Style -->
     <Style TargetType="{x:Type local:LightWindow}">
         <Setter Property="WindowStyle" Value="None" />
@@ -116,7 +79,12 @@
                                         <ColumnDefinition Width="Auto" />
                                         <ColumnDefinition Width="*" />
                                     </Grid.ColumnDefinitions>
-                                    <Image Grid.Column="0" Source="/ScreenToGif;component/Resources/Icons/Logo24x.png" Margin="5,5,0,0" />
+                                    <Viewbox Margin="5,5,0,0" Width="{TemplateBinding MaxSize}" Height="{TemplateBinding MaxSize}"
+                                             SnapsToDevicePixels="True" UseLayoutRounding="True"
+                                             Stretch="Uniform">
+                                        <ContentControl Content="{TemplateBinding Child}"
+                                                        Width="Auto" Height="Auto"/>
+                                    </Viewbox>
                                     <TextBlock x:Name="CaptionText" Text="{TemplateBinding Title}" 
                                                Grid.Column="1" Effect="{DynamicResource ShadowEffectDynamic}"
                                                FontFamily="Segoe UI" FontSize="16" Foreground="#FF6F5252"
@@ -185,7 +153,7 @@
                     <Border x:Name="Chrome"
                             BorderBrush="{TemplateBinding BorderBrush}"
                             Background="{TemplateBinding Background}"
-                            BorderThickness="1"
+                            BorderThickness="{TemplateBinding BorderThickness}"
                             Margin="0"
                             SnapsToDevicePixels="True">
                         <ContentPresenter ContentTemplate="{TemplateBinding ContentTemplate}"
@@ -227,6 +195,7 @@
                         <Grid FlowDirection="LeftToRight">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="60*" />
+                                <ColumnDefinition Width="Auto" />
                                 <ColumnDefinition Width="40*" />
                             </Grid.ColumnDefinitions>
 
@@ -240,13 +209,15 @@
                                 </TextBox>
                             </Grid>
 
-                            <Grid Grid.Column="1">
+                            <Border Grid.Column="1" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1,0,0,0" />
+
+                            <Grid Grid.Column="2">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="*" />
                                     <RowDefinition Height="*" />
                                 </Grid.RowDefinitions>
-                                <RepeatButton Content="▲" Grid.Row="0" Name="Part_UpButton" Style="{StaticResource OfficeRepeatButtonStyle}" FontSize="8" VerticalContentAlignment="Top" Padding="0,-1,0,0" Margin="0,0,-1,-1" />
-                                <RepeatButton Content="▼" Grid.Row="1" Name="Part_DownButton" Style="{StaticResource OfficeRepeatButtonStyle}" FontSize="8" VerticalContentAlignment="Bottom" Padding="0" Margin="0,0,-1,-1" />
+                                <RepeatButton Content="▲" Grid.Row="0" Name="Part_UpButton" Style="{StaticResource OfficeRepeatButtonStyle}" FontSize="8" VerticalContentAlignment="Top" BorderThickness="0,0,0,1" Padding="0" Margin="0" Width="Auto"/>
+                                <RepeatButton Content="▼" Grid.Row="1" Name="Part_DownButton" Style="{StaticResource OfficeRepeatButtonStyle}" FontSize="8" VerticalContentAlignment="Top" BorderThickness="0,1,0,0" Padding="0" Margin="0" />
                             </Grid>
                         </Grid>
                     </Border>
