--- a/ScreenToGif/ScreenToGif/Windows/Recorder.xaml
+++ b/ScreenToGif/ScreenToGif/Windows/Recorder.xaml
@@ -2,10 +2,11 @@
                     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:custom="clr-namespace:ScreenToGif.Controls"
-                    Title="ScreenToGif" Height="255" Width="504"
+                    Title="Screen To Gif" Height="255" Width="504"
                     SnapsToDevicePixels="True"
+                    Child="{StaticResource Monitor}"
                     WindowStyle="None" AllowsTransparency="True" WindowStartupLocation="CenterScreen"
-                    Background="WhiteSmoke" Topmost="True" Effect="{DynamicResource ShadowEffectText}"
+                    Background="White" Topmost="True" Effect="{DynamicResource ShadowEffectText}"
                     Icon="/ScreenToGif;component/Resources/Logo.ico"
                     SizeChanged="LightWindow_SizeChanged">
 
