--- a/SimpleTrader/SimpleTrader.WPF/Styles/Common.xaml
+++ b/SimpleTrader/SimpleTrader.WPF/Styles/Common.xaml
@@ -9,8 +9,9 @@
     <SolidColorBrush x:Key="BrushPrimary1" Color="{StaticResource ColorPrimary1}" />
     <SolidColorBrush x:Key="BrushPrimary2" Color="{StaticResource ColorPrimary2}" />
 
-    <!-- Text Boxes-->
-    <Style TargetType="TextBox">
+    <!-- Text Box Base -->
+    <Style x:Key="TextBoxBase" TargetType="Control">
+        <Setter Property="Padding" Value="2" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="Template">
             <Setter.Value>
@@ -22,6 +23,12 @@
             </Setter.Value>
         </Setter>
     </Style>
+
+    <!-- Text Boxes-->
+    <Style TargetType="TextBox" BasedOn="{StaticResource TextBoxBase}"/>
+
+    <!-- PasswordBox -->
+    <Style TargetType="PasswordBox" BasedOn="{StaticResource TextBoxBase}"/>
 
     <!-- Buttons -->
     <Style TargetType="Button">
