#16 Navigating Between Views

--- a/SimpleTrader/SimpleTrader.WPF/Controls/NavigationBar.xaml
+++ b/SimpleTrader/SimpleTrader.WPF/Controls/NavigationBar.xaml
@@ -35,15 +35,15 @@
             </Grid.ColumnDefinitions>
 
             <RadioButton Grid.Column="0" Content="Home" 
-                         IsChecked="{Binding CurrentViewModel, Mode=OneWay, ConverterParameter={x:Type vm:HomeViewModel},Converter={StaticResource EqualValueToParameterConverter}}" 
+                         IsChecked="{Binding Navigator.CurrentViewModel, Mode=OneWay, ConverterParameter={x:Type vm:HomeViewModel},Converter={StaticResource EqualValueToParameterConverter}}" 
                          Command="{Binding UpdateCurrentViewModelCommand}" 
                          CommandParameter="{x:Static nav:ViewType.Home}"/>
             <RadioButton Grid.Column="1" Content="Portfolio" 
-                         IsChecked="{Binding CurrentViewModel, Mode=OneWay, ConverterParameter={x:Type vm:PortfolioViewModel},Converter={StaticResource EqualValueToParameterConverter}}" 
+                         IsChecked="{Binding Navigator.CurrentViewModel, Mode=OneWay, ConverterParameter={x:Type vm:PortfolioViewModel},Converter={StaticResource EqualValueToParameterConverter}}" 
                          Command="{Binding UpdateCurrentViewModelCommand}" 
                          CommandParameter="{x:Static nav:ViewType.Portfolio}" />
             <RadioButton Grid.Column="2" Content="Buy" 
-                         IsChecked="{Binding CurrentViewModel, Mode=OneWay, ConverterParameter={x:Type vm:BuyViewModel},Converter={StaticResource EqualValueToParameterConverter}}" 
+                         IsChecked="{Binding Navigator.CurrentViewModel, Mode=OneWay, ConverterParameter={x:Type vm:BuyViewModel},Converter={StaticResource EqualValueToParameterConverter}}" 
                          Command="{Binding UpdateCurrentViewModelCommand}" 
                          CommandParameter="{x:Static nav:ViewType.Buy}" />
             <RadioButton Grid.Column="3" Content="Sell" />
